4 of the main models done and uploaded

--- a/notebooks/data_processing/data_preprocessing.ipynb
+++ b/notebooks/data_processing/data_preprocessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,225 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "Date",
-         "rawType": "datetime64[ns, UTC]",
-         "type": "unknown"
-        },
-        {
-         "name": "Open",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "High",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Low",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Close",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Volume",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Ticker",
-         "rawType": "object",
-         "type": "string"
-        }
-       ],
-       "conversionMethod": "pd.DataFrame",
-       "ref": "effa943e-593b-4e56-a647-e52b731b269c",
-       "rows": [
-        [
-         "0",
-         "2023-04-03 13:30:00+00:00",
-         "408.8500061035156",
-         "411.30999755859375",
-         "408.8200073242188",
-         "411.1900024414063",
-         "14278892.0",
-         "SPY"
-        ],
-        [
-         "1",
-         "2023-04-03 14:30:00+00:00",
-         "411.2000122070313",
-         "411.3699951171875",
-         "408.4400024414063",
-         "409.0400085449219",
-         "10506955.0",
-         "SPY"
-        ],
-        [
-         "2",
-         "2023-04-03 15:30:00+00:00",
-         "409.05999755859375",
-         "409.8900146484375",
-         "408.9700012207031",
-         "409.6401062011719",
-         "7643987.0",
-         "SPY"
-        ],
-        [
-         "3",
-         "2023-04-03 16:30:00+00:00",
-         "409.6449890136719",
-         "409.7799987792969",
-         "408.9500122070313",
-         "409.2099914550781",
-         "5003256.0",
-         "SPY"
-        ],
-        [
-         "4",
-         "2023-04-03 17:30:00+00:00",
-         "409.2200012207031",
-         "409.6799926757813",
-         "408.8999938964844",
-         "409.6099853515625",
-         "6087517.0",
-         "SPY"
-        ]
-       ],
-       "shape": {
-        "columns": 7,
-        "rows": 5
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Volume</th>\n",
-       "      <th>Ticker</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-04-03 13:30:00+00:00</td>\n",
-       "      <td>408.850006</td>\n",
-       "      <td>411.309998</td>\n",
-       "      <td>408.820007</td>\n",
-       "      <td>411.190002</td>\n",
-       "      <td>14278892.0</td>\n",
-       "      <td>SPY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023-04-03 14:30:00+00:00</td>\n",
-       "      <td>411.200012</td>\n",
-       "      <td>411.369995</td>\n",
-       "      <td>408.440002</td>\n",
-       "      <td>409.040009</td>\n",
-       "      <td>10506955.0</td>\n",
-       "      <td>SPY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2023-04-03 15:30:00+00:00</td>\n",
-       "      <td>409.059998</td>\n",
-       "      <td>409.890015</td>\n",
-       "      <td>408.970001</td>\n",
-       "      <td>409.640106</td>\n",
-       "      <td>7643987.0</td>\n",
-       "      <td>SPY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023-04-03 16:30:00+00:00</td>\n",
-       "      <td>409.644989</td>\n",
-       "      <td>409.779999</td>\n",
-       "      <td>408.950012</td>\n",
-       "      <td>409.209991</td>\n",
-       "      <td>5003256.0</td>\n",
-       "      <td>SPY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2023-04-03 17:30:00+00:00</td>\n",
-       "      <td>409.220001</td>\n",
-       "      <td>409.679993</td>\n",
-       "      <td>408.899994</td>\n",
-       "      <td>409.609985</td>\n",
-       "      <td>6087517.0</td>\n",
-       "      <td>SPY</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       Date        Open        High         Low       Close  \\\n",
-       "0 2023-04-03 13:30:00+00:00  408.850006  411.309998  408.820007  411.190002   \n",
-       "1 2023-04-03 14:30:00+00:00  411.200012  411.369995  408.440002  409.040009   \n",
-       "2 2023-04-03 15:30:00+00:00  409.059998  409.890015  408.970001  409.640106   \n",
-       "3 2023-04-03 16:30:00+00:00  409.644989  409.779999  408.950012  409.209991   \n",
-       "4 2023-04-03 17:30:00+00:00  409.220001  409.679993  408.899994  409.609985   \n",
-       "\n",
-       "       Volume Ticker  \n",
-       "0  14278892.0    SPY  \n",
-       "1  10506955.0    SPY  \n",
-       "2   7643987.0    SPY  \n",
-       "3   5003256.0    SPY  \n",
-       "4   6087517.0    SPY  "
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Check the data\n",
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -266,12 +48,12 @@
      "text": [
       "Number of days of data for each ticker:\n",
       "Ticker\n",
-      "BTC-USD     697\n",
-      "DOGE-USD    697\n",
-      "ETH-USD     697\n",
-      "SOL-USD     697\n",
-      "SPY         477\n",
-      "XRP-USD     697\n",
+      "BTC-USD     709\n",
+      "DOGE-USD    709\n",
+      "ETH-USD     709\n",
+      "SOL-USD     709\n",
+      "SPY         485\n",
+      "XRP-USD     709\n",
       "Name: Date, dtype: int64\n",
       "\n",
       "Daily data with number of transactions:\n",
@@ -301,12 +83,12 @@
       "\n",
       "Average daily number of transactions for each ticker:\n",
       "Ticker\n",
-      "BTC-USD     23.912482\n",
-      "DOGE-USD    23.902439\n",
-      "ETH-USD     23.911047\n",
-      "SOL-USD     23.911047\n",
-      "SPY          6.958071\n",
-      "XRP-USD     23.912482\n",
+      "BTC-USD     23.913963\n",
+      "DOGE-USD    23.904090\n",
+      "ETH-USD     23.912553\n",
+      "SOL-USD     23.912553\n",
+      "SPY          6.958763\n",
+      "XRP-USD     23.913963\n",
       "Name: Daily_Transactions, dtype: float64\n"
      ]
     }
@@ -368,14 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\young\\AppData\\Local\\Temp\\ipykernel_23508\\4250605515.py:34: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+      "C:\\Users\\young\\AppData\\Local\\Temp\\ipykernel_9744\\4063719718.py:20: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
       "  data.groupby(['Ticker', pd.Grouper(key='Date', freq='3H')])['ln_hourly_return']\n",
       "c:\\Users\\young\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\arraylike.py:399: RuntimeWarning: divide by zero encountered in log\n",
       "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
@@ -383,10 +165,8 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "\n",
-    "# Ensure Date is datetime\n",
+    "# Ensure Date is datetime, which accounts for hourly data\n",
     "data['Date'] = pd.to_datetime(data['Date'])\n",
     "\n",
     "# Sort data by Ticker and Date\n",
@@ -398,52 +178,72 @@
     "# Calculate 3-hourly log returns\n",
     "data['ln_3_hourly_return'] = data.groupby('Ticker', group_keys=False)['Close'].apply(lambda x: np.log(x).diff(3))\n",
     "\n",
-    "# Extract daily closing prices\n",
-    "daily_close = (\n",
-    "    data.groupby(['Ticker', pd.Grouper(key='Date', freq='D')])['Close']\n",
-    "    .last()\n",
-    "    .reset_index()\n",
-    ")\n",
-    "\n",
-    "# Calculate daily log returns\n",
-    "daily_close['ln_daily_return'] = daily_close.groupby('Ticker', group_keys=False)['Close'].apply(lambda x: np.log(x).diff())\n",
-    "\n",
-    "# Merge daily log returns back into the original DataFrame\n",
-    "data = data.merge(daily_close[['Ticker', 'Date', 'ln_daily_return']], on=['Ticker', 'Date'], how='left')\n",
-    "\n",
-    "# Calculate realized variance\n",
+    "# Fill the forward fill missing daily log returns\n",
+    "# data['ln_daily_return'] = data.groupby('Ticker')['ln_daily_return'].ffill()\n",
+    "# Calculate realized variances\n",
     "data['hourly_rv'] = data['ln_hourly_return']**2\n",
     "\n",
-    "# 3-hourly RV: Sum of squared log returns over 3 hours\n",
+    "# 3-hourly RV: Sum of squared log returns over 3-hour windows\n",
     "data['3_hourly_rv'] = (\n",
     "    data.groupby(['Ticker', pd.Grouper(key='Date', freq='3H')])['ln_hourly_return']\n",
     "    .transform(lambda x: (x**2).sum())\n",
     ")\n",
     "\n",
-    "# Daily RV: Sum of squared hourly log returns over 24 hours\n",
-    "data['daily_rv'] = (\n",
-    "    data.groupby(['Ticker', pd.Grouper(key='Date', freq='D')])['ln_hourly_return']\n",
-    "    .transform(lambda x: (x**2).sum())\n",
+    "# Daily RV: Sum of squared hourly returns per day\n",
+    "data['Date_floor'] = data['Date'].dt.floor('D')  # Create a floored date column for daily grouping\n",
+    "daily_rv = (\n",
+    "    data.groupby(['Ticker', 'Date_floor'])['hourly_rv']\n",
+    "    .sum()\n",
+    "    .reset_index()\n",
+    "    .rename(columns={'hourly_rv': 'daily_rv'})\n",
     ")\n",
     "\n",
-    "# Logarithmic transformation of realized variance\n",
-    "data['ln_hourly_rv'] = np.log(data['hourly_rv'])\n",
-    "data['ln_3_hourly_rv'] = np.log(data['3_hourly_rv'])\n",
-    "data['ln_daily_rv'] = np.log(data['daily_rv'])\n",
+    "# Merge daily RV back into the original DataFrame\n",
+    "data = data.merge(daily_rv, on=['Ticker', 'Date_floor'], how='left')\n",
     "\n",
-    "# Handle -inf for ln_hourly_rv, make it 0\n",
-    "data['ln_hourly_rv'] = data['ln_hourly_rv'].replace(-np.inf, 0)\n",
+    "# Logarithmic transformations for RV\n",
+    "data['ln_hourly_rv'] = np.log(data['hourly_rv']).replace(-np.inf, 0)\n",
+    "data['ln_3_hourly_rv'] = np.log(data['3_hourly_rv']).replace(-np.inf, 0)\n",
     "\n",
-    "# Do a forward fill of missing daily RV values\n",
-    "data['ln_daily_rv'] = data.groupby('Ticker')['ln_daily_rv'].ffill() \n",
     "\n",
-    "# Create a weekly rv\n",
-    "data['weekly_rv'] = data.groupby('Ticker')['daily_rv'].transform(lambda x: x.rolling(window=7*24).mean())\n",
-    "data['ln_weekly_rv'] = np.log(data['weekly_rv'])\n",
+    "# Prepare daily DataFrame for weekly and monthly RV calculations\n",
+    "daily_df = data[['Ticker', 'Date_floor', 'daily_rv']].drop_duplicates()\n",
     "\n",
-    "# Create a monthly rv\n",
-    "data['monthly_rv'] = data.groupby('Ticker')['daily_rv'].transform(lambda x: x.rolling(window=30).mean())\n",
-    "data['ln_monthly_rv'] = np.log(data['monthly_rv'])"
+    "# Calculate daily log RV\n",
+    "daily_df['ln_daily_rv'] = np.log(daily_df['daily_rv']).replace(-np.inf, 0)\n",
+    "\n",
+    "# Calculate weekly RV (7-day rolling average)\n",
+    "daily_df['weekly_rv'] = (\n",
+    "    daily_df.groupby('Ticker')['daily_rv']\n",
+    "    .transform(lambda x: x.rolling(window=7, min_periods=7).sum() / 7)\n",
+    ")\n",
+    "\n",
+    "# Logarithmic transformation for weekly RV\n",
+    "daily_df['ln_weekly_rv'] = np.log(daily_df['weekly_rv']).replace(-np.inf, 0)\n",
+    "\n",
+    "# Calculate monthly RV (30-day rolling average)\n",
+    "daily_df['monthly_rv'] = (\n",
+    "    daily_df.groupby('Ticker')['daily_rv']\n",
+    "    .transform(lambda x: x.rolling(window=30, min_periods=30).sum() / 30)\n",
+    ")\n",
+    "# Logarithmic transformation for monthly RV\n",
+    "daily_df['ln_monthly_rv'] = np.log(daily_df['monthly_rv']).replace(-np.inf, 0)\n",
+    "\n",
+    "# Lag the ln daily RV by one day\n",
+    "daily_df['ln_daily_rv_lag1'] = daily_df.groupby('Ticker')['ln_daily_rv'].shift(1)\n",
+    "daily_df['ln_daily_rv_lag2'] = daily_df.groupby('Ticker')['ln_daily_rv'].shift(2)\n",
+    "\n",
+    "# Lag the ln weekly, and monthly RV by one and two days\n",
+    "daily_df['ln_weekly_rv_lag1'] = daily_df.groupby('Ticker')['ln_weekly_rv'].shift(1)\n",
+    "daily_df['ln_weekly_rv_lag2'] = daily_df.groupby('Ticker')['ln_weekly_rv'].shift(2)\n",
+    "daily_df['ln_monthly_rv_lag1'] = daily_df.groupby('Ticker')['ln_monthly_rv'].shift(1)\n",
+    "daily_df['ln_monthly_rv_lag2'] = daily_df.groupby('Ticker')['ln_monthly_rv'].shift(2)\n",
+    "\n",
+    "# Merge weekly and monthly RV back into the original DataFrame\n",
+    "data = data.merge(daily_df, on=['Ticker', 'Date_floor'], how='left')\n",
+    "\n",
+    "# Drop the temporary Date_floor column if no longer needed\n",
+    "data.drop(columns=['Date_floor'], inplace=True)\n"
    ]
   },
   {
@@ -456,16 +256,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Lag all realized variance measures by 1\n",
     "data['ln_hourly_rv_lag1'] = data.groupby('Ticker')['ln_hourly_rv'].shift(1)\n",
-    "data['ln_3_hourly_rv_lag1'] = data.groupby('Ticker')['ln_3_hourly_rv'].shift(1)\n",
-    "data['ln_daily_rv_lag1'] = data.groupby('Ticker')['ln_daily_rv'].shift(1)\n",
-    "data['ln_weekly_rv_lag1'] = data.groupby('Ticker')['ln_weekly_rv'].shift(1)\n",
-    "data['ln_monthly_rv_lag1'] = data.groupby('Ticker')['ln_monthly_rv'].shift(1)"
+    "data['ln_3_hourly_rv_lag1'] = data.groupby('Ticker')['ln_3_hourly_rv'].shift(3)\n",
+    "\n",
+    "# Now lag all rv by 2\n",
+    "data['ln_hourly_rv_lag2'] = data.groupby('Ticker')['ln_hourly_rv'].shift(2)\n",
+    "data['ln_3_hourly_rv_lag2'] = data.groupby('Ticker')['ln_3_hourly_rv'].shift(6)\n",
+    "\n",
+    "# Lag the returns by 1 too\n",
+    "data['ln_hourly_return_lag1'] = data.groupby('Ticker')['ln_hourly_return'].shift(1)\n",
+    "data['ln_3_hourly_return_lag1'] = data.groupby('Ticker')['ln_3_hourly_return'].shift(3)\n",
+    "\n",
+    "# Lag the returns by 2 too\n",
+    "data['ln_hourly_return_lag2'] = data.groupby('Ticker')['ln_hourly_return'].shift(2)\n",
+    "data['ln_3_hourly_return_lag2'] = data.groupby('Ticker')['ln_3_hourly_return'].shift(6)\n",
+    "\n"
    ]
   },
   {
@@ -477,12 +287,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Drop the intermediate columns\n",
-    "data = data.drop(columns=['hourly_rv', '3_hourly_rv', 'daily_rv', 'weekly_rv', 'monthly_rv'])"
+    "data = data.drop(columns=['daily_rv_x','daily_rv_y', 'hourly_rv', '3_hourly_rv', 'weekly_rv', 'monthly_rv'])"
    ]
   },
   {
@@ -490,12 +300,12 @@
    "metadata": {},
    "source": [
     "## Classification\n",
-    "In my model, I wish to classify each coin as either high risk, medium risk, or low risk, based on their hourly realised variance. High RV constitutes as high risk, and likewise for medium risk and low risk."
+    "In my model, I wish to classify each coin as either high risk, medium risk, or low risk, based on their hourly realised variance. High RV constitutes as high risk, and likewise for medium risk and low risk. I've used a weighting system to determine the risk level"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -503,12 +313,12 @@
      "output_type": "stream",
      "text": [
       "     Ticker  ln_hourly_rv  ln_3_hourly_rv  ln_daily_rv  Composite_Score  \\\n",
-      "0   BTC-USD    -12.737050      -10.683420    -7.966684        -9.735778   \n",
-      "2   ETH-USD    -12.376387      -10.285618    -7.575197        -9.348561   \n",
-      "5   XRP-USD    -11.950287       -9.879607    -7.202063        -8.954971   \n",
-      "1  DOGE-USD    -11.601146       -9.521515    -6.835879        -8.594623   \n",
-      "3   SOL-USD    -11.184339       -9.125065    -6.520952        -8.234863   \n",
-      "4       SPY    -13.621181      -11.958249   -10.287492       -11.455457   \n",
+      "0   BTC-USD    -12.712268      -10.660145    -7.940902        -9.710948   \n",
+      "2   ETH-USD    -12.349248      -10.259421    -7.547093        -9.321223   \n",
+      "5   XRP-USD    -11.921673       -9.850787    -7.171542        -8.925341   \n",
+      "1  DOGE-USD    -11.577992       -9.501986    -6.815516        -8.573952   \n",
+      "3   SOL-USD    -11.167331       -9.110837    -6.502131        -8.217783   \n",
+      "4       SPY    -13.597308      -11.926745   -10.257267       -11.426119   \n",
       "\n",
       "          Risk  \n",
       "0     Low Risk  \n",
@@ -591,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
