--- a/notebooks/data_processing/data_import.ipynb
+++ b/notebooks/data_processing/data_import.ipynb
@@ -2,9 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YF.download() has changed argument auto_adjust default to True\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
