implemented ewma and garch

--- a/notebooks/data_processing/data_preprocessing.ipynb
+++ b/notebooks/data_processing/data_preprocessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -150,14 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\young\\AppData\\Local\\Temp\\ipykernel_9744\\4063719718.py:20: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+      "C:\\Users\\young\\AppData\\Local\\Temp\\ipykernel_18548\\4063719718.py:20: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
       "  data.groupby(['Ticker', pd.Grouper(key='Date', freq='3H')])['ln_hourly_return']\n",
       "c:\\Users\\young\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\arraylike.py:399: RuntimeWarning: divide by zero encountered in log\n",
       "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,15 @@
     "# Lag the returns by 2 too\n",
     "data['ln_hourly_return_lag2'] = data.groupby('Ticker')['ln_hourly_return'].shift(2)\n",
     "data['ln_3_hourly_return_lag2'] = data.groupby('Ticker')['ln_3_hourly_return'].shift(6)\n",
-    "\n"
+    "\n",
+    "data['hourly_rv_lag1'] = data.groupby('Ticker')['hourly_rv'].shift(1)\n",
+    "data['hourly_rv_lag2'] = data.groupby('Ticker')['hourly_rv'].shift(2)\n",
+    "\n",
+    "data['three_hourly_rv_lag1'] = data.groupby('Ticker')['3_hourly_rv'].shift(3)\n",
+    "data['three_hourly_rv_lag2'] = data.groupby('Ticker')['3_hourly_rv'].shift(6)\n",
+    "\n",
+    "# Save the data to a new CSV file\n",
+    "data.to_csv('../../data/processed_data.csv', index=False)\n"
    ]
   },
   {
@@ -287,12 +295,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop the intermediate columns\n",
-    "data = data.drop(columns=['daily_rv_x','daily_rv_y', 'hourly_rv', '3_hourly_rv', 'weekly_rv', 'monthly_rv'])"
+    "# Rename daily_rv_x to daily_rv, and drop the other daily_rv_y column\n",
+    "data['daily_rv'] = data['daily_rv_x']\n",
+    "data = data.drop(columns=['daily_rv_x', 'daily_rv_y'])\n"
    ]
   },
   {
@@ -305,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
