--- a/notebooks/models/har.ipynb
+++ b/notebooks/models/har.ipynb
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,24 +605,30 @@
     "    max_index = len(X_test) - step_ahead  # Ensure enough data for prediction\n",
     "    \n",
     "    for i in range(window_size, max_index + 1):\n",
-    "        # Extract features from the rolling window (excluding 'Date')\n",
-    "        X_window = X_test.drop(columns=['Date']).iloc[i - window_size:i]\n",
+    "        # Use the target series within the rolling window to fit the GARCH model\n",
+    "        window_data = y_test.iloc[i - window_size : i]\n",
     "        \n",
-    "        # Predict the next `step_ahead` step using the last row of the window\n",
-    "        y_pred = model.predict(X_window.tail(1))[0]\n",
+    "        # Fit a GARCH(1,1) model on the window data (assuming zero mean)\n",
+    "        garch_model = arch_model(window_data, mean='Zero', vol='GARCH', p=1, q=1, dist='normal')\n",
+    "        res = garch_model.fit(disp='off')\n",
     "        \n",
-    "        # Get the actual value `step_ahead` steps ahead of the current window\n",
-    "        actual_index = i + step_ahead - 1  # Actual value's index\n",
+    "        # Forecast for the next step_ahead period\n",
+    "        forecast = res.forecast(horizon=step_ahead, reindex=False)\n",
+    "        # Extract forecasted variance for the desired step (step_ahead-th column)\n",
+    "        y_pred = forecast.variance.iloc[-1, step_ahead - 1]\n",
+    "        \n",
+    "        # Get the actual value from y_test at the forecast time point\n",
+    "        actual_index = i + step_ahead - 1\n",
     "        actual_value = y_test.iloc[actual_index]\n",
     "        \n",
-    "        # Capture the date of the predicted value (actual's date)\n",
+    "        # Capture the corresponding date from X_test's 'Date' column\n",
     "        current_date = X_test['Date'].iloc[actual_index]\n",
     "        \n",
     "        predictions.append(y_pred)\n",
     "        actuals.append(actual_value)\n",
     "        dates.append(current_date)\n",
     "    \n",
-    "    return predictions, actuals, dates"
+    "    return predictions, actuals, dates\n"
    ]
   },
   {
