--- a/notebooks/results/evaluation.ipynb
+++ b/notebooks/results/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -22,12 +22,13 @@
     "import pandas as pd\n",
     "\n",
     "# Load forecast data\n",
-    "garch = pd.read_csv('../../results/models/GARCH_oos_pred_1.csv')\n",
-    "garch_lstm = pd.read_csv('../../results/models/garch-lstm_forecast_1.csv')\n",
-    "lstm = pd.read_csv('../../results/models/lstm_forecast.csv')\n",
-    "har = pd.read_csv('../../results/models/har_forecast.csv')\n",
-    "rf = pd.read_csv('../../results/models/rf_forecast.csv')\n",
-    "test = pd.read_csv('../../data/ethusd_lasso_selected.csv')[['time', 'RV_d,t']]\n",
+    "bagging_dt = pd.read_csv('results/bagging_dt.csv')\n",
+    "har = pd.read_csv('results/har.csv')\n",
+    "garch = pd.read_csv('results/garch.csv')\n",
+    "rf = pd.read_csv('results/rf.csv')\n",
+    "svr = pd.read_csv('results/svr.csv')\n",
+    "test = pd.read_csv('processed_data/test.csv')[['Date', 'ln_hourly_rv', ln_3_hour]]\n",
+    "\n",
     "\n",
     "# Rename columns for clarity\n",
     "garch.columns = ['time', 'GARCH']\n",
