Pushed the evaluation results

--- a/notebooks/data_processing/data_import.ipynb
+++ b/notebooks/data_processing/data_import.ipynb
@@ -16,7 +16,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  6 of 6 completed\n"
+      "[*********************100%***********************]  5 of 5 completed\n"
      ]
     }
    ],
@@ -26,9 +26,9 @@
     "from datetime import datetime\n",
     "\n",
     "# Define tickers and date range\n",
-    "TICKERS = ['SPY', 'BTC-USD', 'ETH-USD', 'XRP-USD', 'SOL-USD', 'DOGE-USD']\n",
+    "TICKERS = ['BTC-USD', 'ETH-USD', 'XRP-USD', 'SOL-USD', 'DOGE-USD']\n",
     "START_DATE = '2023-04-01'\n",
-    "END_DATE = datetime.now().strftime('%Y-%m-%d')\n",
+    "END_DATE = '2025-03-10'\n",
     "\n",
     "data = yf.download(TICKERS, start=START_DATE, end=END_DATE, interval='1h', group_by='Ticker')\n",
     "\n",
