--- a/notebooks/results/evaluation.ipynb
+++ b/notebooks/results/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\young\\AppData\\Local\\Temp\\ipykernel_6632\\1709267665.py:5: SettingWithCopyWarning: \n",
+      "/var/folders/cx/mjdsxp6x367bkv2wc28scrt80000gn/T/ipykernel_18559/1709267665.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -240,7 +240,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\young\\AppData\\Local\\Temp\\ipykernel_6632\\2546037691.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/cx/mjdsxp6x367bkv2wc28scrt80000gn/T/ipykernel_18559/2546037691.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  best_models_r2 = summary.groupby(['Frequency','Risk Group']).first()\n"
      ]
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,10 @@
     "\n",
     "# Convert the results into a DataFrame and display it\n",
     "dm_results_df = pd.DataFrame(dm_results)\n",
-    "print(dm_results_df)\n"
+    "print(dm_results_df)\n",
+    "\n",
+    "# Save results\n",
+    "dm_results_df.to_csv('../../results/evaluation/dm_test_results.csv', index=False)\n"
    ]
   }
  ],
@@ -432,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
