Implemented trading simulator for hourly data

--- a/notebooks/results/evaluation.ipynb
+++ b/notebooks/results/evaluation.ipynb
@@ -86,36 +86,26 @@
     "                  on=['Date', 'Ticker', 'Risk Group', 'Frequency'], how='outer')\n",
     "\n",
     "\n",
-    "print(data.head())"
+    "print(data.head())\n",
+    "\n",
+    "# Save RV results to a CSV file\n",
+    "data.to_csv('../../results/combined_test_results.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minimum and maximum RMSE:\n",
-      "                 min       max\n",
-      "Model                         \n",
-      "bagging_dt  0.859443  2.485639\n",
-      "ewma        0.885295  2.553039\n",
-      "garch       0.884789  2.443261\n",
-      "har         0.897821  2.573997\n",
-      "rf          0.867560  2.488804\n",
-      "svr         0.851058  2.471022\n",
-      "Minimum and Maximum R2:\n",
-      "                 min       max\n",
-      "Model                         \n",
-      "bagging_dt  0.019736  0.388133\n",
-      "ewma       -0.059974  0.368939\n",
-      "garch       0.046368  0.327220\n",
-      "har        -0.007979  0.318631\n",
-      "rf          0.017238  0.387768\n",
-      "svr         0.023019  0.310761\n"
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m rows \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Group the data by Risk Group and Frequency.\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m grouped \u001b[38;5;241m=\u001b[39m \u001b[43mdata\u001b[49m\u001b[38;5;241m.\u001b[39mgroupby([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRisk Group\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFrequency\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m (risk, freq), group \u001b[38;5;129;01min\u001b[39;00m grouped:\n\u001b[1;32m     19\u001b[0m     \u001b[38;5;66;03m# For each model, compute evaluation metrics within the group.\u001b[39;00m\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m model \u001b[38;5;129;01min\u001b[39;00m model_names:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
      ]
     }
    ],
@@ -163,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
